# ai-agents-from-scratch

./: .gitignore  AGENTS_FRAMEWORK.md  CHANGES.md  CLAUDE.md  IMPROVEMENTS.md  LANDING.md  PROMO.md  README.md  TOOL_DECORATOR_UPDATES.md  agents.py  code_samples.py  index.html  output.txt  pyproject.toml  tool_helpers.py  verify_responses_api.py
.claude/: settings.local.json
00-introduction/: README.md
01-api-basics/: 01-basic.py  03-errors.py  README.md  example.py
01-fundamentals/: README.md
02-conversation-memory/: 01-automatic.py  02-manual.py  README.md  example.py
02-prompt-engineering/: README.md  examples.py
02-prompting/: README.md
03-development-setup/: README.md  test_setup.py
03-prompting/: README.md  example.py
03-structured-output/: example.py
04-api-basics/: 01-basic.py  02-async.py
04-structured-output/: README.md
04-tool-calling/: README.md  advanced.py  basic.py
04-tool-calling-basics/: README.md  example.py
05-conversation-memory/: 01-automatic.py  02-manual.py
05-tool-calling-basics/: README.md  example.py
05-tool-calling-pydantic/: example.py
05-workflow-patterns/: README.md
06-agent-architecture/: README.md  class.py
06-structured-output/: 01-basic.py  README.md
06-tool-calling-pydantic/: README.md  example.py
06-workflow-patterns/: README.md  example.py
07-agent-loop/: README.md  example.py
07-tool-calling/: README.md  advanced.py  basic.py  examples.py
07-workflow-patterns/: README.md  example.py
08-agent-class/: README.md  example.py
08-agent-loop/: README.md  example.py
09-memory/: README.md  (+1 more)
(+47 files in other folders)
